# EmbeddedIntentRecognizer

./: .gitignore  README.md
EmbeddedIntentRecognizer/: CMakeLists.txt
EmbeddedIntentRecognizer/src/: CMakeLists.txt  Console.cpp  Console.h  IntentRecognizer.cpp  IntentRecognizer.h  Program.cpp  Utils.h
EmbeddedIntentRecognizer/test/: CMakeLists.txt  IntentRecognizerUnitTest.cpp
